--- a/src/style/workoutplan.css
+++ b/src/style/workoutplan.css
@@ -1,5 +1,6 @@
 .content-mid h1 {
 	margin-top: 20%;
+	padding: 0 5% 0 5%;
 }
 .content-mid p {
 	color: white;
@@ -32,5 +33,5 @@
 	flex-direction: column;
 	align-items: center;
 	overflow-y: scroll;
-	gap: 3%;
+	gap: 1.5%;
 }
