--- a/src/style/workouts.css
+++ b/src/style/workouts.css
@@ -10,6 +10,7 @@
 	align-items: center;
 	/* justify-content: space-evenly; */
 	padding: 0 5% 0 5%;
+	transition: all 0.4s;
 }
 .checked {
 	height: 3vh;
