--- a/src/style/workoutplan.css
+++ b/src/style/workoutplan.css
@@ -1,37 +1,43 @@
 .content-mid h1 {
-	margin-top: 20%;
+	margin-top: 10%;
 	padding: 0 5% 0 5%;
 }
 .content-mid p {
 	color: white;
 }
 .mid-subtitle {
+	color: white;
 	width: 100%;
-	height: 1%;
+	height: 4%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
-.mid-subtitle ul {
-	margin-block-start: 0;
-	margin-block-end: 0;
-	padding-inline-start: 0;
-	margin: 0 0 2% 0;
-	width: 65%;
-	list-style: none;
+.subtitles {
+	width: 80%;
 	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	color: #fff;
 }
-
 .mid-workouts {
 	width: 100%;
-	margin-top: 2%;
 	height: 75%;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+	margin-top: 0;
+}
+.workouts-centered {
+	width: 80%;
+	height: 100%;
 	overflow-y: scroll;
-	gap: 1.5%;
+}
+
+.subtitle-ex {
+	width: 70%;
+	margin-left: 5%;
+	text-align: left;
+}
+.subtitle-set {
+	width: 10%;
+}
+.subtitle-rep {
+	width: 20%;
+	margin-right: 5%;
 }
