--- a/src/style/workout.css
+++ b/src/style/workout.css
@@ -1,14 +1,35 @@
-.content-mid h1 {
-	margin-top: 20%;
+.content-mid {
+	margin-top: -5vh;
+}
+.timeused {
+	position: fixed;
+	color: white;
+	font-size: 1.5em;
+	padding: 0.65em 0 0 73%;
 }
 
-.mid-workouts {
-	width: 100%;
-	margin-top: 15%;
-	height: 65%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	overflow-y: scroll;
-	gap: 3%;
+.mid-workoutSelector {
+	width: 80%;
+	height: 72px;
+	background-color: var(--dark-color);
+	border-radius: 10px;
+}
+
+.mid-workoutSelector select {
+	width: 80%;
+	height: 100%;
+	text-align: center;
+	background-color: transparent;
+	border: 0;
+	color: white;
+	font-size: 1.1em;
+	font-weight: 700;
+	text-transform: uppercase;
+	outline: 0;
+}
+.mid-workoutSelector select option {
+	background-color: var(--dark-color);
+	font-size: 0.75em;
+	font-weight: 700;
+	width: 100px;
 }
