--- a/src/style/workout.css
+++ b/src/style/workout.css
@@ -29,7 +29,19 @@
 }
 .mid-workoutSelector select option {
 	background-color: var(--dark-color);
-	font-size: 0.75em;
+	font-size: 1em;
 	font-weight: 700;
 	width: 100px;
+}
+
+.mid-workoutControls {
+	padding: 5%;
+	width: 70%;
+	display: flex;
+	justify-content: space-evenly;
+}
+.mid-plan {
+	width: 85%;
+	height: 70%;
+	overflow-y: scroll;
 }
