--- a/src/style/workouts.css
+++ b/src/style/workouts.css
@@ -1,39 +1,31 @@
 .workout-item {
+	background-color: transparent;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 3%;
+	color: white;
+}
+.item-list {
 	width: 100%;
 	height: 8vh;
-	background-color: #424549;
+	background-color: #2b3135;
 	color: white;
 	border-radius: 12px;
-
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	transition: all 0.4s;
-	margin-bottom: 3%;
-}
-.checked {
-	height: 4vh;
-	background-color: var(--sub-alt-color);
-	color: var(--text-color);
-	text-decoration: line-through;
-}
-.checked .item-title {
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-}
-.checked .item-reps {
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-}
+	justify-content: center;
 
-/* .item-title .item-sets .item-reps; */
-
+	min-height: 100%;
+	max-height: 100%;
+}
 .item-title {
 	margin-left: 5%;
 	text-align: left;
 	width: 70%;
+	text-transform: uppercase;
+	font-size: 1.1em;
 }
 .item-sets {
 	width: 10%;
@@ -41,4 +33,51 @@
 .item-reps {
 	width: 20%;
 	margin-right: 5%;
+}
+
+.checked {
+	transition: all 0.5s;
+	height: 4vh;
+	text-decoration: line-through;
+	font-style: italic;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+.checked .item-title,
+.checked .item-sets,
+.checked .item-reps {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
+.active {
+	display: flex;
+}
+
+.item-stats {
+	transition: all 0.5s;
+	width: 95%;
+	height: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background-color: #42515b;
+	border-radius: 0 0 12px 12px;
+}
+.item-stats h6 {
+	font-size: 0.9em;
+	margin: 1.5em 0 0 0;
+	font-weight: 0;
+}
+.item-stats p {
+	font-size: 1.2em;
+	margin: 0 0 1em 0;
+}
+
+.stats-weight,
+.stats-time,
+.stats-note {
+	width: 33%;
 }
