--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,16 +1,10 @@
 body {
 	margin: 0;
+	padding: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
 		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
 		"Helvetica Neue", sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 	overflow: hidden;
-}
-
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-		monospace;
 }
 
 :root {
@@ -19,69 +13,12 @@ code {
 	--dark-color: #1d1f21;
 	--text-color: #d1d0c5;
 
-	--roundness: 0.5rem;
-	--font: "Roboto Mono", "Vazirmatn";
-	font-weight: 400;
 	user-select: none;
 	background-color: var(--bg-color);
-	font-family: var(--font);
 }
 
 ::-webkit-scrollbar {
 	display: none;
-}
-
-.container {
-	text-align: center;
-}
-
-.content {
-	min-height: 100vh;
-	background-color: var(--bg-color);
-	display: flex;
-	flex-direction: column;
-}
-
-.content-mid {
-	height: 100vh;
-	width: 100%;
-}
-
-.desktopNotice {
-	display: none;
-}
-
-@media only screen and (min-width: 500px) {
-	.content {
-		display: none;
-	}
-	.desktopNotice {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		flex-direction: column;
-		width: 100vw;
-		height: 100vh;
-		color: white;
-	}
-	.desktopNotice ol p {
-		font-size: 1.25em;
-		text-align: center;
-		font-weight: bold;
-	}
-	.desktopNotice ol {
-		color: var(--sub-color);
-		width: 40%;
-		text-align: left;
-	}
-	.desktopNotice ol li {
-		font-size: 0.9em;
-	}
-	.desktopNoticeLists {
-		display: flex;
-		width: 100%;
-		justify-content: center;
-	}
 }
 
 .hidden {
