--- a/src/style/routeStyles/home.css
+++ b/src/style/routeStyles/home.css
@@ -32,13 +32,14 @@
 	flex-wrap: wrap;
 	flex-direction: row;
 	gap: 10%;
+	text-align: center;
 }
 
 .navboxes-workout {
 	width: 100%;
 	height: 150px;
 	background: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-		url(../img/workouts.png);
+		url(../../img/workouts.png);
 	box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 	border-radius: 24px;
 	background-position: center;
@@ -57,7 +58,7 @@
 	width: 45%;
 	height: 150px;
 	background: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-		url(../img/progress.png);
+		url(../../img/progress.png);
 	box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 	border-radius: 24px;
 	background-position: left;
@@ -75,7 +76,7 @@
 	width: 45%;
 	height: 150px;
 	background: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-		url(../img/previousworkouts.png);
+		url(../../img/previousworkouts.png);
 	box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 	border-radius: 24px;
 	background-position: 45% 70%;
