--- a/src/style/routeStyles/workout.css
+++ b/src/style/routeStyles/workout.css
@@ -13,6 +13,9 @@
 	height: 72px;
 	background-color: var(--dark-color);
 	border-radius: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .mid-workoutSelector select {
