--- a/src/style/componentStyles/workouts.css
+++ b/src/style/componentStyles/workouts.css
@@ -99,3 +99,66 @@
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
+
+.workouts-modalContainer {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 250px;
+}
+
+.modalContainer-content {
+	width: 90%;
+	height: 100%;
+	border-radius: 12px;
+	background-color: #2b3135;
+	color: white;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+}
+
+.modalContainer-content h1 {
+	margin: 0;
+}
+.modalContainer-content p {
+	margin: 0;
+}
+.modalContainer-content input {
+	width: 40%;
+	height: 60px;
+	border-radius: 12px;
+	stroke: 0;
+	border: 0;
+	text-align: center;
+	font-size: 3em;
+	margin: 0.3em 0 0.3em 0;
+	background-color: rgba(255, 255, 255, 0.1);
+	color: white;
+}
+
+.customui-buttons {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.customui-buttons button {
+	width: 35%;
+	height: 50px;
+	border-radius: 12px;
+	border: 0;
+	font-size: 1.3em;
+	color: white;
+}
+.customui-buttons button:nth-child(1) {
+	background-color: rgba(255, 0, 0, 0.3);
+}
+.customui-buttons button:nth-child(2) {
+	background-color: rgba(153, 205, 50, 0.5);
+}
