--- a/src/style/componentStyles/workouts.module.css
+++ b/src/style/componentStyles/workouts.module.css
@@ -1,4 +1,4 @@
-.workout-item {
+.workoutItem {
 	background-color: transparent;
 	display: flex;
 	flex-direction: column;
@@ -6,7 +6,7 @@
 	margin-bottom: 3%;
 	color: white;
 }
-.item-list {
+.itemList {
 	width: 100%;
 	height: 8vh;
 	background-color: #2b3135;
@@ -20,30 +20,30 @@
 	min-height: 100%;
 	max-height: 100%;
 }
-.item-title {
+.itemTitle {
 	margin-left: 5%;
 	text-align: left;
 	width: 70%;
 	text-transform: uppercase;
 	font-size: 1.1em;
 }
-.item-sets {
+.itemSets {
 	width: 10%;
 }
-.item-reps {
+.itemReps {
 	width: 20%;
 	margin-right: 5%;
 }
 
-.checked .item-title,
-.checked .item-sets,
-.checked .item-reps {
+.checked .itemTitle,
+.checked .itemSets,
+.checked .itemReps {
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
 
-.item-stats {
+.itemStats {
 	width: 95%;
 	height: 90px;
 	display: flex;
@@ -51,7 +51,7 @@
 	background-color: #42515b;
 	border-radius: 0 0 12px 12px;
 }
-.item-stats h6 {
+.itemStats h6 {
 	padding-top: 15%;
 	height: 25%;
 	font-size: 0.9em;
@@ -62,7 +62,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.item-stats p {
+.itemStats p {
 	height: 40%;
 	font-size: 1.2em;
 	margin: 0;
@@ -73,13 +73,13 @@
 	justify-content: center;
 }
 
-.stats-weight,
-.stats-time,
-.stats-note {
+.statsWeight,
+.statsTime,
+.statsNote {
 	width: 33%;
 	height: 100%;
 }
-.stats-note p {
+.statsNote p {
 	line-height: 0.85em;
 	font-size: 1.1em;
 }
